--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "discord.js": "^14.5.0",
     "node-html-parser": "^6.1.1",
     "play-dl": "^1.9.6",
+    "sqlite3": "^5.1.2",
     "steamid": "^2.0.0"
   }
 }
