--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "@discordjs/voice": "^0.13.0",
     "axios": "^0.27.2",
     "discord.js": "^14.5.0",
+    "libsodium-wrappers": "^0.7.10",
     "node-html-parser": "^6.1.1",
     "play-dl": "^1.9.6",
     "sqlite3": "^5.1.2",
