--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@discordjs/voice": "^0.13.0",
     "axios": "^0.27.2",
     "discord.js": "^14.5.0",
+    "ffmpeg-static": "^5.1.0",
     "libsodium-wrappers": "^0.7.10",
     "node-html-parser": "^6.1.1",
     "play-dl": "^1.9.6",
