--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
     "@discordjs/voice": "^0.15.0",
-    "axios": "^1.3.4",
-    "discord.js": "^14.8.0",
+    "axios": "^1.4.0",
+    "discord.js": "^14.13.0",
     "ffmpeg-static": "^5.1.0",
+    "jsmediatags": "^3.9.7",
     "libsodium-wrappers": "^0.7.11",
     "node-html-parser": "^6.1.5",
     "play-dl": "^1.9.6",
