--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "libsodium-wrappers": "^0.7.11",
     "node-html-parser": "^6.1.5",
     "play-dl": "^1.9.6",
+    "random-useragent": "^0.5.0",
     "steamid": "^2.0.0"
   }
 }
