--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
+  "type": "module",
   "dependencies": {
     "@discordjs/voice": "^0.15.0",
     "axios": "^1.5.1",
     "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.2.0",
     "jsmediatags": "^3.9.7",
     "libsodium-wrappers": "^0.7.13",
