--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ffmpeg-static": "^5.2.0",
     "jsmediatags": "^3.9.7",
     "libsodium-wrappers": "^0.7.13",
+    "mongodb": "^6.1.0",
     "node-html-parser": "^6.1.10",
     "play-dl": "^1.9.7",
     "random-useragent": "^0.5.0",
