--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
 		"dotenv": "^16.4.5",
 		"mongodb": "^6.9.0",
 		"steamid": "^2.1.0"
+	},
+	"devDependencies": {
+		"@types/node": "^22.7.4",
+		"tsx": "^4.19.1",
+		"typescript": "^5.6.2"
 	}
 }
