--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
 	"type": "module",
-	"allowSyntheticDefaultImports": true,
 	"dependencies": {
 		"@types/steamid": "^2.0.3",
 		"axios": "^1.7.7",
@@ -11,6 +10,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^22.7.4",
+		"prettier": "^3.3.3",
 		"tsx": "^4.19.1",
 		"typescript": "^5.6.2"
 	}
