--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
   "semi": true,
   "singleQuote": true,
   "printWidth": 80,
-  "quoteProps": "preserve"
+  "quoteProps": "preserve",
+  "bracketSpacing": true
 }
