--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"discord.js": "^14.16.3",
 		"dotenv": "^16.4.5",
 		"mongodb": "^6.9.0",
+		"node-html-parser": "^6.1.13",
 		"steamid": "^2.1.0"
 	},
 	"devDependencies": {
