--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
+  "extends": "@tsconfig/node24/tsconfig.json",
   "compilerOptions": {
-    "outDir": "build",
-    "allowJs": true,
-    "target": "ES2022",
-    "moduleResolution": "Node",
-    "module": "ES2022",
-    "allowSyntheticDefaultImports": true
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "bundler"
   },
-  "include": ["./src/**/*"],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
