--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.4",
-    "globby": "^16.1.0"
+    "globby": "^16.1.0",
+    "mongodb": "^7.1.0"
   }
 }
