--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "target": "esnext",
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "paths": {
+      "~/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
