--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Git
+.git
+
 # Logs
 logs
 *.log
@@ -6,6 +9,7 @@ npm-debug.log*
 # Dependency directory
 **/node_modules/**
 _node_modules
+node_modules
 .pnp.cjs
 
 # Coverage directory used by tools like istanbul
